# freemusicarchive-downloader

./: README.md  pyproject.toml
fma_dl/: download_songs.py  main.py  scraper.py  url_validation.py
